# AbacusOS

./: .gitignore  Cargo.toml  README.md  bootimg_add_fs.sh
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_text.rs
src/allocator/: fixed_size_block.rs  linked_list.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  stack_overflow.rs
