[package]
name = "abacus_os"
version = "0.1.0"
authors = ["Connor Macdonald <csm119@uclive.ac.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.12.1" # Safe abstractions for special x86 instructions
uart_16550 = "0.2.0"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.8.0"


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
] # Allows cargo test to exit qemu on finish and use serial for test output
test-success-exit-code = 33 # Remaps qemu exit code for tests

[[test]]
name = "stack_overflow"
harness = false